# c_wav2mp3

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  makefile.win  wav2mp3.c
src/: wav2mp3.c
